Edit Metric BMI Calculator Form

--- a/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
+++ b/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
@@ -1,3 +1,24 @@
 <div class="metric-bmi-calculator-component">
-  metric-bmi-calculator-component
+  <form action="#">
+    <div class="row">
+      <input type="text" name="age" placeholder="Age" id="metric-bmi-calculator-form-age"/>
+    </div>
+    <div class="row">
+      <div class="col">
+        <input type="radio" name="sex" value="male" id="metric-bmi-calculator-form-sex-male"/>
+      </div>
+      <div class="col">
+        <input type="radio" name="sex" value="female" id="metric-bmi-calculator-form-sex-female"/>
+      </div>
+    </div>
+    <div class="row">
+      <input type="text" name="height" placeholder="Height" id="metric-bmi-calculator-form-height"/>
+    </div>
+    <div class="row">
+      <input type="text" name="weight" placeholder="Weight" id="metric-bmi-calculator-form-weight"/>
+    </div>
+    <div class="row">
+      <input type="button" value="Calculate" id="metric-bmi-calculator-form-calculate"/>
+    </div>
+  </form>
 </div>
