- Add Angular Material, - Complete Design Metric BMI Calculator Form

--- a/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
+++ b/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
@@ -1,24 +1,34 @@
-<div class="metric-bmi-calculator-component">
-  <form action="#">
-    <div class="row">
-      <input type="text" name="age" placeholder="Age" id="metric-bmi-calculator-form-age"/>
+<div class="metric-bmi-calculator-component v-shadow-box">
+  <form class="metric-bmi-calculator-form">
+
+    <div>
+      <mat-form-field class="full-width metric-bmi-calculator-form-age">
+        <input matInput placeholder="Age:"/>
+      </mat-form-field>
     </div>
-    <div class="row">
-      <div class="col">
-        <input type="radio" name="sex" value="male" id="metric-bmi-calculator-form-sex-male"/>
-      </div>
-      <div class="col">
-        <input type="radio" name="sex" value="female" id="metric-bmi-calculator-form-sex-female"/>
-      </div>
+
+    <mat-radio-group class="row">
+      <mat-radio-button class="col" value="male">Male</mat-radio-button>
+      <mat-radio-button class="col" value="female">Female</mat-radio-button>
+    </mat-radio-group>
+
+    <div>
+      <mat-form-field class="full-width metric-bmi-calculator-form-height">
+        <input matInput placeholder="Height:"/>
+      </mat-form-field>
     </div>
-    <div class="row">
-      <input type="text" name="height" placeholder="Height" id="metric-bmi-calculator-form-height"/>
+
+    <div>
+      <mat-form-field class="full-width metric-bmi-calculator-form-weight">
+        <input matInput placeholder="Weight:"/>
+      </mat-form-field>
     </div>
-    <div class="row">
-      <input type="text" name="weight" placeholder="Weight" id="metric-bmi-calculator-form-weight"/>
+
+    <div class="full-width">
+      <button mat-stroked-button color="primary" class="full-width metric-bmi-calculator-form-calculate">
+        Calculate
+      </button>
     </div>
-    <div class="row">
-      <input type="button" value="Calculate" id="metric-bmi-calculator-form-calculate"/>
-    </div>
+
   </form>
 </div>
