--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div id="AppComponent" class="container">
+<div class="app-component">
   <app-metric-bmi-calculator></app-metric-bmi-calculator>
 </div>
