- Edit form, - TODO: Handle event

--- a/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
+++ b/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
@@ -14,17 +14,19 @@
 
     <div>
       <mat-form-field class="full-width metric-bmi-calculator-form-height">
+        <span matSuffix class="v-mat-suffix">&nbsp; (cm)</span>
         <input matInput placeholder="Height:"/>
       </mat-form-field>
     </div>
 
     <div>
       <mat-form-field class="full-width metric-bmi-calculator-form-weight">
+        <span matSuffix class="v-mat-suffix">&nbsp; (kg)</span>
         <input matInput placeholder="Weight:"/>
       </mat-form-field>
     </div>
 
-    <div class="full-width">
+    <div>
       <button mat-stroked-button color="primary" class="full-width metric-bmi-calculator-form-calculate">
         Calculate
       </button>
