--- a/src/app/metric-bmi-calculator/metric-bmi-calculator.component.scss
+++ b/src/app/metric-bmi-calculator/metric-bmi-calculator.component.scss
@@ -6,4 +6,10 @@
         font-style: italic;
         color: rgba(0,0,0,.54);
     }
+    
+    // .mat-form-field-invalid {
+    //     .v-mat-suffix {
+    //         color: #f44336;
+    //     }
+    // }
 }
