--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,8 +15,20 @@ body {
 .v-shadow-box {
     background-color: rgb(255, 255, 255);
     box-shadow: rgb(85, 85, 85) 0 0 8px 0;
-    padding: 10px 15px;
+    padding: 15px;
     border-radius: 4px;
     margin-left: auto;
     margin-right: auto;
+    .v-box-title {
+        background-color: rgba(0, 0, 0, .1);
+        margin: -15px -15px 10px;
+        padding: 8px 20px;
+        font-size: 1.2em;
+        text-align: center;
+        color: rgba(0, 0, 0, .54);
+    }
+}
+
+.hidden {
+    display: none;
 }
