update age validate in metric bmi calculator form

--- a/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
+++ b/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
@@ -6,7 +6,7 @@
 
     <div>
       <mat-form-field class="full-width">
-        <input matInput name="age" [(ngModel)]="bmiForm.age" pattern="[1-9][0-9]" placeholder="Age:"/>
+        <input matInput name="age" [(ngModel)]="bmiForm.age" pattern="[1-9][0-9]?" placeholder="Age:"/>
       </mat-form-field>
     </div>
 
