Add metric bmi calculator's result: - Add metric bmi result component - Add bmi classification service - Works okay // TODO, add event integration once click calculate button.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div class="app-component">
   <app-metric-bmi-calculator></app-metric-bmi-calculator>
+  <app-metric-bmi-result></app-metric-bmi-result>
 </div>
