--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,8 +17,7 @@ body {
     box-shadow: rgb(85, 85, 85) 0 0 8px 0;
     padding: 15px;
     border-radius: 4px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 20px auto;
     .v-box-title {
         background-color: rgba(0, 0, 0, .1);
         margin: -15px -15px 10px;
