Build Reactive Form

--- a/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
+++ b/src/app/metric-bmi-calculator/metric-bmi-calculator.component.html
@@ -4,15 +4,15 @@
 
     <div class="v-box-title">BMI Calculator</div>
 
-    <form class="metric-bmi-calculator-form" #metricBmiForm="ngForm">
+    <form class="metric-bmi-calculator-form" [formGroup]="metricBmiForm">
 
       <div>
         <mat-form-field class="full-width">
-          <input matInput name="age" [(ngModel)]="bmiForm.age" pattern="[1-9][0-9]?" placeholder="Age:"/>
+          <input matInput formControlName="age" placeholder="Age:" />
         </mat-form-field>
       </div>
 
-      <mat-radio-group class="row" name="sex" [(ngModel)]="bmiForm.sex" required>
+      <mat-radio-group class="row" formControlName="sex">
         <mat-radio-button class="col" value="male">Male</mat-radio-button>
         <mat-radio-button class="col" value="female">Female</mat-radio-button>
       </mat-radio-group>
@@ -20,19 +20,19 @@
       <div>
         <mat-form-field class="full-width">
           <span matSuffix class="v-mat-suffix">&nbsp; (cm)</span>
-          <input matInput name="height" [(ngModel)]="bmiForm.height" placeholder="Height:" pattern="[1-9][0-9]*" required/>
+          <input matInput formControlName="height" placeholder="Height:" />
         </mat-form-field>
       </div>
 
       <div>
         <mat-form-field class="full-width">
           <span matSuffix class="v-mat-suffix">&nbsp; (kg)</span>
-          <input matInput name="weight" [(ngModel)]="bmiForm.weight" placeholder="Weight:" pattern="[1-9][0-9]*(\.[0-9]*)?" required/>
+          <input matInput formControlName="weight" placeholder="Weight:" />
         </mat-form-field>
       </div>
 
       <div>
-        <button mat-stroked-button color="primary" [disabled]="!metricBmiForm.form.valid" class="full-width" (click)="metricBmiCalculate()">
+        <button mat-stroked-button color="primary" [disabled]="!metricBmiForm.valid" class="full-width" (click)="metricBmiCalculate()">
           Calculate
         </button>
       </div>
