--- a/src/app/metric-bmi-calculator/metric-bmi-calculator.component.scss
+++ b/src/app/metric-bmi-calculator/metric-bmi-calculator.component.scss
@@ -3,6 +3,10 @@
         width: 100%;
         max-width: 400px;
         
+        & > *:not(:first-child) {
+            margin-top: 25px;
+        }
+
         .v-mat-suffix {
             font-style: italic;
             color: rgba(0,0,0,.54);
